# Intelligent_Robotics_Lab

./: .gitignore  README.md  plot_path.py  vc_path.csv
bag_exercise3/es_bag2/: es_bag2.mcap  metadata.yaml
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: publisher_lambda_function.cpp  subscriber_lambda_function.cpp
src/cpp_srvcli/: package.xml
src/custom_action_cpp/: CMakeLists.txt  package.xml
src/custom_action_interfaces/: package.xml
src/my_package/: package.xml
src/tutorial_interfaces/: package.xml
src/vacuum_robot/: CMakeLists.txt  package.xml
src/vacuum_robot/action/: ChargeBattery.action
src/vacuum_robot/src/: charging_station_action_client.cpp  charging_station_node.cpp  robot_action_server.cpp  robot_node.cpp
src/vacuum_robot_action/: CMakeLists.txt  package.xml
src/vacuum_robot_action/launch/: charging_system.launch.py
src/vacuum_robot_action/src/: charging_station_action_client.cpp  robot_action_server.cpp
src/vacuum_robot_bag/: CMakeLists.txt  package.xml
src/vacuum_robot_bag/src/: vacuum_tracker.cpp
src/vacuum_robot_pubsub/: CMakeLists.txt  package.xml
src/vacuum_robot_pubsub/launch/: robot_system.launch.py
src/vacuum_robot_pubsub/src/: charging_station_node.cpp  robot_node.cpp
